background on full cr

--- a/app/views/evaluations/_form.html.haml
+++ b/app/views/evaluations/_form.html.haml
@@ -34,7 +34,7 @@
             %div.tips
               %h5 
                 %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Your company name and the position will be displayed to candidates when they take your Evaluation.
+                The company name and the position will be displayed to candidates when they take your Evaluation.
             %div.control-group
               %div.controls    
                 = f.text_field :company, autofocus: "autofocus", style: "padding: 4px; width: 300px; font-size: 15px; text-align: center;", placeholder: "Company Name"
