--- a/app/views/paths/submission.html.haml
+++ b/app/views/paths/submission.html.haml
@@ -1,6 +1,6 @@
 :css
-  .container { background-color: transparent !important;}
-  .post { font-size: 23px; }
+  .container.body { padding: 4px; margin: 75px auto 20px; width: 804px;}
+  .post { font-size: 23px; width: 100%; margin-left: -12px;}
   .post:hover { background-color: transparent; }
   .post a { text-decoration: none; }
   .postheader { padding: 12px 0;   }
