--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -628,26 +628,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
       }
     }
   }
-  
-  .welcome{
-    text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
-    
-    .holder {
-      border-bottom: 1px solid rgba(0,0,0,.1); padding: 14px;
-      
-      .image_box { 
-        display: inline-block; text-align: left; width:11%;
-        
-        img { height: 100px; }
-      }
-      .text_box {
-        display: inline-block; width: 86%; margin-left: 12px; vertical-align: top; text-align: left;
-        
-        h3 { font-size: 24px; }
-        p { font-size: 15px; line-height: 20px; margin-top: 8px; }
-      }
-    }
-  }
+
   .application_steps {
     margin: 20px; border-radius: 4px; padding: 12px;
     
@@ -710,6 +691,45 @@ body.employer .container.body { width: inherit; background-color: transparent; p
         }
       }
     }
+  }
+}
+
+.welcome {
+  text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
+  .holder {
+    border-bottom: 1px solid rgba(0,0,0,.1); padding: 14px;
+    .image_box { 
+      display: inline-block; text-align: left; width:11%;
+      img { height: 100px; }
+    }
+    .text_box {
+      display: inline-block; width: 86%; margin-left: 12px; vertical-align: top; text-align: left;
+      h3 { font-size: 24px; }
+      p { font-size: 15px; line-height: 20px; margin-top: 8px; }
+    }
+  }
+}
+
+.alert-preview {
+  display: block; 
+  margin: 50px auto -70px auto; 
+  width: 400px; 
+  border-radius: 4px; 
+  height: 60px; 
+  color: white; 
+  font-size: 18px; 
+  padding: 15px; 
+  text-align: center; 
+  background-color: rgba(70, 136, 90, 0.85);
+  
+  p { margin-bottom: 15px; }
+  .submit_button {
+    float: inherit; 
+    background-color: white; 
+    color: black; 
+    margin-top: 20px; 
+    font-weight: bold;
+    &:hover { box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4); }
   }
 }
 
