--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -8,4 +8,5 @@ $employer_blue: rgba(36, 72, 109, 0.8);
 $employer_orange: rgba(126, 78, 54, 0.78);
 $employer_green: rgba(114, 153, 89, 0.88);
 $employer_orange_light: rgba(212, 152, 123, 0.14);
+$employer_orange_light_opaque: rgba(212, 152, 123, 0.5);
 $employer_green_light: rgba(150, 201, 117, 0.27);
