--- a/app/views/admin/paths.html.haml
+++ b/app/views/admin/paths.html.haml
@@ -21,7 +21,7 @@
           %td= p.personas.empty? ? "" : p.personas.first.name
           %td= p.sections.count
           %td= p.all_tasks.count
-          %td= link_to p.user.name, p.user
+          %td= link_to p.user.try(:name), (p.user || "#")
           %td= p.published? ? "published" : "waiting"
           %td
             - if p.approved?
