--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -138,7 +138,7 @@
                   %li Unlimited Candidates 
                   %li{ style: "padding: 25px 15px;" } Email Support
                 .price_footer 
-                  = link_to "Select", new_group_path(p: Group::SINGLE_PLAN), class: "action_button" 
+                  = link_to "Start Free Trial", new_group_path(p: Group::SINGLE_PLAN), class: "action_button" 
               %li.price_block.popular 
                 %h3  
                   %div Most Popular
@@ -152,7 +152,7 @@
                   %li Unlimited Candidates 
                   %li Premium Phone and Email Support
                 .price_footer 
-                  = link_to "Select", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
+                  = link_to "Start Free Trial", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
               %li.price_block 
                 %h3 6-15 Users 
                 .price 
@@ -164,7 +164,7 @@
                   %li Unlimited Candidates 
                   %li Premium Phone and Email Support
                 .price_footer 
-                  = link_to "Select", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button" 
+                  = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button" 
               %li.price_block 
                 %h3 16-50 Users 
                 .price 
@@ -176,7 +176,7 @@
                   %li Unlimited Candidates  
                   %li Premium Phone and Email Support
                 .price_footer 
-                  = link_to "Select", new_group_path(p: Group::SIXTEEN_TO_FIFTY_PLAN), class: "action_button" 
+                  = link_to "Start Free Trial", new_group_path(p: Group::SIXTEEN_TO_FIFTY_PLAN), class: "action_button" 
             %div.sales_help_inline{ style: "margin-top: -30px; "} 
               %p{ style: "margin: 0; float: right;"} 
                 Have more than 50 users?  
