--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,3 +1,7 @@
+:css
+  body { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto;  }
+  .container.body { background-color: rgba(36, 72, 109, 0.8); }
+  
 %div#ideapage{ style: "margin-top: 0px;" }    
   %div.ideas_header
     - if current_user
