--- a/app/views/ideas/form.html.haml
+++ b/app/views/ideas/form.html.haml
@@ -1,3 +1,7 @@
+:css
+  body { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto;  }
+  .container.body { background-color: rgba(36, 72, 109, 0.8) }
+  
 %div.single_pane
   %div.submit_idea{style:"display:inline-block;"}
     %h2= @idea.new_record? ? "Submit a new #{Idea::TYPES[@idea.idea_type]}" : "Edit #{Idea::TYPES[@idea.idea_type]}"
