cold sales email, variables needed

--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -45,6 +45,9 @@
         %h1{ style: "margin-top:0;" } MetaBright Evaluator
         %h3 Order Checkout
     .body{ style: "padding:16px 16px 0;" }
+      .reassurance
+        %h2 Start Your Free 14-Day Trial
+        %h3 Begin Testing Your Candidates in Less Than 60 Seconds.
       %p{ style: "position: relative; left: 78px; bottom: 10px; float: left; "}
         = link_to "https://stripe.com/help/security", target: "_blank" do
           = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/stripe_solid_clipped.png"
