pinterest verification code

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,6 +4,9 @@
 = stylesheet_link_tag "application"
 = javascript_include_tag "application"
 
+/ Pinterest verification
+%meta{:content => "60b0c2db4335c2c678f01cdb92cb0816", :name => "p:domain_verify"}
+
 %meta{ name: "stripe:key", content: STRIPE_PUBLIC_KEY }
  
 - if @path && !@path.new_record?
